--- a/bestSeller.ipynb
+++ b/bestSeller.ipynb
@@ -5,7 +5,7 @@
    "id": "a7b24a35",
    "metadata": {},
    "source": [
-    "# This is an Anlysis on The best book sellers on amazon\n"
+    "# Amazon Best-Selling Books Analysis"
    ]
   },
   {
@@ -13,23 +13,26 @@
    "id": "a4fc8806",
    "metadata": {},
    "source": [
-    "Name: Book name<br>\n",
-    "Author: Book author<br>\n",
-    "User Rating: Amazon user rating (0.0 - 5.0)<br>\n",
-    "Reviews: Number of user reviews<br>\n",
-    "Price: Book price (as of 2020)<br>\n",
-    "Year: The year(s) it ranked<br>\n",
-    "Genre: Fiction or non-fiction<br>"
+    "<ul>\n",
+    "<li>Name: Book name</li>\n",
+    "<li>Author: Book author</li>\n",
+    "<li>User Rating: Amazon user rating (0.0 - 5.0)</li>\n",
+    "<li>Reviews: Number of user reviews</li>\n",
+    "<li>Price: Book price (as of 2020)</li>\n",
+    "<li>Year: The year(s) it ranked</li>\n",
+    "<li>Genre: Fiction or non-fiction</li>\n",
+    "</ul>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "id": "bd914360",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "df = pd.read_csv('bestsellers.csv') # read the bestseller file and strore it in df = data frame"
@@ -44,14 +47,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "3996fadc",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "b18eb3ba",
    "metadata": {},
    "outputs": [
@@ -81,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "15267feb",
    "metadata": {},
    "outputs": [
@@ -99,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "5c70beb1",
    "metadata": {},
    "outputs": [
@@ -117,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "657ede60",
    "metadata": {},
    "outputs": [
@@ -151,23 +148,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "e36c3bdf",
    "metadata": {},
    "outputs": [],
    "source": [
     "# remove any duplicate rows\n",
+    "\n",
     "df.drop_duplicates(inplace = True) # inplace means that changes are made to the original data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "5719ff63",
    "metadata": {},
    "outputs": [],
    "source": [
     "# rename the columns of the DataFrame to make them more descriptive\n",
+    "\n",
     "df.rename(columns={\n",
     "    \"Name\": \"Book Title\",\n",
     "    \"Year\": \"Publication Year\",\n",
@@ -176,13 +175,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1e39ca0c",
+   "metadata": {},
+   "source": [
+    "### The data after reanameing\n",
+    "\n",
+    "<ul>\n",
+    "<li>Book Title: Book name</li>\n",
+    "<li>Author: Book author</li>\n",
+    "<li>Rating: Amazon user rating (0.0 - 5.0)</li>\n",
+    "<li>Reviews: Number of user reviews</li>\n",
+    "<li>Price: Book price (as of 2020)</li>\n",
+    "<li>Publication Year: The year(s) it ranked</li>\n",
+    "<li>Genre: Fiction or non-fiction</li>\n",
+    "</ul>\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "21323c46",
    "metadata": {},
    "outputs": [],
    "source": [
     "#  convert the \"Price\" column to a float data type to make it easier to work with\n",
+    "\n",
     "df[\"Price\"] = df[\"Price\"].astype(float)"
    ]
   },
@@ -191,12 +210,12 @@
    "id": "9b9a68ae",
    "metadata": {},
    "source": [
-    "## Anlaysis\n"
+    "## Analysis\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "df1804d6",
    "metadata": {},
    "outputs": [
@@ -222,13 +241,14 @@
    ],
    "source": [
     "# Analyzing Author Popularity\n",
+    "\n",
     "authorCounts = df[\"Author\"].value_counts()\n",
     "print(authorCounts)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "id": "844835a2",
    "metadata": {},
    "outputs": [
@@ -256,6 +276,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# to save the new data\n",
     "# authorCounts.head(10).to_csv(\"topAuthors.csv\")"
    ]
   }
